--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "svelte": "^3.19.1"
   },
   "devDependencies": {
+    "@rollup/plugin-buble": "^0.21.1",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "babel-eslint": "^10.0.1",
